PLATOPS-430 - reference "zone" property to determine location. Define "protected" service connection details. If public, call through to protected instance for status polling check. Tests exercising behaviour.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -122,6 +122,13 @@ auditing {
 
 
 microservice {
+  services {
+    zone-health-protected {
+      host = "localhost"
+      port = 9000
+    }
+  }
+
   metrics {
     graphite {
       host = graphite
@@ -131,3 +138,5 @@ microservice {
     }
   }
 }
+
+zone = "public"
