refactoring to make logic testable at unit level

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -123,10 +123,13 @@ auditing {
 
 microservice {
   services {
-    zone-health-protected {
-      host = "localhost"
-      port = 9081
-    }
+#
+#    enable to test downstream service
+#
+#    zone-health-downstream {
+#      host = "localhost"
+#      port = 9081
+#    }
   }
 
   metrics {
