use mongo repository in health check

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -120,17 +120,7 @@ auditing {
   traceRequests = false
 }
 
-mongodb {
-  uri = "mongodb://localhost:27017/zone-health?connectTimeoutMS=4000"
-  failoverStrategy = {
-    initialDelayMsecs = 100
-    retries = 0
-    delay = {
-      function = fibonacci
-      factor = 1
-    }
-  }
-}
+mongodb.uri = "mongodb://localhost:27017/zone-health?connectTimeoutMS=4000"
 
 microservice {
   services {
