Mongo TLS update

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -120,7 +120,7 @@ auditing {
   traceRequests = false
 }
 
-mongodb.uri = "mongodb://localhost:27017/zone-health?connectTimeoutMS=4000"
+mongodb.uri = "mongodb://localhost:27017/zone-health?connectTimeoutMS=4000&sslEnabled=true"
 
 microservice {
   services {
