TEL-1133 Upgrade all the things
- Migrate to use build.sbt
- Upgrade to the latest platform libraries
- Upgrade scalatest
- Ensure everything compiles
- Ensure the tests pass

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2016 HM Revenue & Customs
+# Copyright 2019 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -40,11 +40,14 @@ application.session.secure = false
 # ~~~~~
 application.langs = "en"
 
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-application.global = uk.gov.hmrc.zonehealth.MicroserviceGlobal
+play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
+
+play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
+play.modules.enabled += "uk.gov.hmrc.zonehealth.Module"
 
 # Router
 # ~~~~~
