TEL-2569: fix all warnings

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,7 +46,7 @@ play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 play.modules.enabled += "uk.gov.hmrc.zonehealth.Module"
 
 # Router
@@ -64,9 +64,9 @@ application.router = prod.Routes
 
 # Controller
 # ~~~~~
-# By default all controllers will have authorisation, logging and 
+# By default all controllers will have authorisation, logging and
 # auditing (transaction monitoring) enabled.
-# The below controllers are the default exceptions to this rule. 
+# The below controllers are the default exceptions to this rule.
 
 controllers {
   # 300 is the default, you may need to change this according to your needs
