--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,6 +49,8 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModu
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 play.modules.enabled += "uk.gov.hmrc.zonehealth.Module"
 
+play.filters.disabled += play.filters.hosts.AllowedHostsFilter
+
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
