--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,7 +38,7 @@ application.session.secure = false
 
 # The application languages
 # ~~~~~
-application.langs = "en"
+play.i18n.langs = ["en"]
 
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
 
@@ -61,7 +61,7 @@ play.filters.disabled += play.filters.hosts.AllowedHostsFilter
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
-application.router = prod.Routes
+play.http.router = prod.Routes
 
 
 # Controller
