TEL-2569: Fixes to integration test compilation
* plus formatting

Co-authored-by: @colin-lamed

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -128,6 +128,10 @@ auditing {
 
 mongodb.uri = "mongodb://localhost:27017/zone-health?connectTimeoutMS=4000"
 
+
+# mongodb.uri = "mongodb://public-mongo-eu-west-2a-1:27017,public-mongo-eu-west-2b-1:27017,public-mongo-eu-west-2c-1:27017/zone-health-aws?ssl=true"
+
+
 microservice {
   services {
 #
