--- a/conf/application.conf
+++ b/conf/application.conf
@@ -126,11 +126,7 @@ auditing {
   traceRequests = false
 }
 
-mongodb.uri = "mongodb://localhost:27017/zone-health?connectTimeoutMS=4000"
-
-
-# mongodb.uri = "mongodb://public-mongo-eu-west-2a-1:27017,public-mongo-eu-west-2b-1:27017,public-mongo-eu-west-2c-1:27017/zone-health-aws?ssl=true"
-
+mongodb.uri = "mongodb://localhost:27017/zone-health"
 
 microservice {
   services {
